# rust-bitcoinkernel

./: Cargo.toml
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/debugger-sessions/: 01-basic-arithmetic.txt  02-preloaded-stack.txt  03-failing-script.txt  04-if-else.txt  05-p2pkh-verify.txt  06-breakpoints.txt  07-time-travel.txt
examples/src/: script_debug.rs  script_debugger.rs  silentpaymentscanner.rs
fuzz/fuzz_targets/: chainman_process_block.rs  script_verify.rs
libbitcoinkernel-sys/bitcoin/src/: txmempool.h
libbitcoinkernel-sys/bitcoin/src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h
libbitcoinkernel-sys/bitcoin/src/script/: debug.cpp  debug.h  interpreter.cpp
src/: lib.rs
src/core/: mod.rs  script_debug.rs  verify.rs
src/ffi/: c_helpers.rs
src/notifications/: types.rs
src/state/: context.rs
tests/: test.rs
