[package]
name = "examples"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "silentpaymentscanner"
path = "src/silentpaymentscanner.rs"

[[bin]]
name = "script_debugger"
path = "src/script_debugger.rs"

[dependencies]
colored = "2"
clap = { version = "4", features = ["derive"] }
silentpayments = "0.1"
bitcoin = "0.31"
secp256k1 = "0.28"
env_logger = "0.11"
log = "0.4"
bitcoinkernel = { path = ".." }
